Add topic description on Confluent Cloud (#383)
* Description feature

* Description feature

* Typo fixes

* Style fix 1

* Style fix 2

* Style fix 3

* Style fix 4

* IsConfluent fix for TU

* Style fix 5

* TU fix

* TU fix 2

* TU fix 3

* TU fix 4

* TU fix 5

* TU fix 5

* TU fix 6

* TU fix 7

* TU style fix

* TU fix

* TU fix 2

* TU fix 3

* TU fix 4

* TU fix 5

* Add new TU

* Fix TU

* Widen coverage, cleanup and status update fix for tag addition

* Remove unsued imports

* Rework: type and null possibility for description variable, iteration in topics, and persist topic status update

* Cleanup (unused imports, variables, code)

* unused imports

* switch createTags arguments & update TU

* unused import

* put log.info and log.error earlier for more coverage & TU updates

* Update response POJO + primitive boolean +  description default null fix + enrich topics with description and tags merged

* enriching topic optimized, topic entity renamed, TU fixed, unused imports removed

---------

Co-authored-by: thcai <thomas.cai_ext@michelin.com>