@@ -16,7 +16,6 @@ import com.michelin.ns4kafka.models.Namespace.NamespaceSpec;
 import com.michelin.ns4kafka.models.Topic;
 import com.michelin.ns4kafka.properties.ManagedClusterProperties;
 import com.michelin.ns4kafka.repositories.TopicRepository;
-import com.michelin.ns4kafka.services.clients.schema.SchemaRegistryClient;
 import com.michelin.ns4kafka.services.executors.TopicAsyncExecutor;
 import io.micronaut.context.ApplicationContext;
 import io.micronaut.inject.qualifiers.Qualifiers;
@@ -56,9 +55,6 @@ class TopicServiceTest {
 
     @Mock
     List<ManagedClusterProperties> managedClusterProperties;
-
-    @Mock
-    SchemaRegistryClient schemaRegistryClient;
 
     /**
      * Validate find topic by name.
@@ -984,6 +980,128 @@ class TopicServiceTest {
         List<String> validationErrors = topicService.validateTags(ns, topic);
         assertEquals(1, validationErrors.size());
         assertEquals("Invalid value \"TAG_TEST\" for field \"tags\": tags are not currently supported.",
-            validationErrors.get(0));
+                validationErrors.getFirst());
+    }
+
+    @Test
+    void shouldReturnTrueWhenTagFormatIsValid() {
+        Topic topicWithTag = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic1").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("test")).build())
+                .build();
+
+        assertEquals(true, topicService.isTagsFormatValid(topicWithTag));
+
+        Topic topicWithSimpliestTag = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic2").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("A")).build())
+                .build();
+
+        assertEquals(true, topicService.isTagsFormatValid(topicWithSimpliestTag));
+
+        Topic topicWithUnderscoreAndNumberTag = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic3").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("TEST1_TAG")).build())
+                .build();
+
+        assertEquals(true, topicService.isTagsFormatValid(topicWithUnderscoreAndNumberTag));
+
+        Topic topicWithUnderscoreAndUpperLowerCase = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic4").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("t1_T_a_g2")).build())
+                .build();
+
+        assertEquals(true, topicService.isTagsFormatValid(topicWithUnderscoreAndUpperLowerCase));
+
+        Topic topicWithMultipleCorrectTags = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic5").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("TEST1", "test2", "tEST_3", "T_a_g")).build())
+                .build();
+
+        assertEquals(true, topicService.isTagsFormatValid(topicWithMultipleCorrectTags));
+    }
+
+    @Test
+    void shouldReturnFalseWhenTagFormatIsInvalid() {
+        Topic topicWithBeginningDigitTag = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic1").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("0test")).build())
+                .build();
+
+        assertEquals(false, topicService.isTagsFormatValid(topicWithBeginningDigitTag));
+
+        Topic topicWithBeginningUnderscoreTag = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic2").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("_TEST")).build())
+                .build();
+
+        assertEquals(false, topicService.isTagsFormatValid(topicWithBeginningUnderscoreTag));
+
+        Topic topicWithForbiddenCharacterTag = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic3").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("test-tag")).build())
+                .build();
+
+        assertEquals(false, topicService.isTagsFormatValid(topicWithForbiddenCharacterTag));
+
+        Topic topicWithManyForbiddenCharactersTag = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic4").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("&~#()[]{}-+=*%:.,;!?^°çé")).build())
+                .build();
+
+        assertEquals(false, topicService.isTagsFormatValid(topicWithManyForbiddenCharactersTag));
+
+        Topic topicWithMultipleIncorrectTags = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic5").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("test-tag", "TEST.tag", "0TEST")).build())
+                .build();
+
+        assertEquals(false, topicService.isTagsFormatValid(topicWithMultipleIncorrectTags));
+
+        Topic topicWithOneIncorrectAndMultipleCorrectTags = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic5").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("testTag", "0TEST-tag", "TEST")).build())
+                .build();
+
+        assertEquals(false, topicService.isTagsFormatValid(topicWithOneIncorrectAndMultipleCorrectTags));
+    }
+
+    @Test
+    void shouldTagsBeInvalidWhenFormatIsWrong() {
+        Namespace ns = Namespace.builder()
+                .metadata(Metadata.builder()
+                        .name("namespace")
+                        .cluster("local")
+                        .build())
+                .build();
+
+        Topic topic = Topic.builder()
+                .metadata(Metadata.builder().name("ns-topic1").build())
+                .spec(Topic.TopicSpec.builder()
+                        .tags(List.of("0TAG-TEST")).build())
+                .build();
+
+        when(managedClusterProperties.stream()).thenReturn(Stream.of(
+                new ManagedClusterProperties("local", ManagedClusterProperties.KafkaProvider.CONFLUENT_CLOUD)));
+
+        List<String> validationErrors = topicService.validateTags(ns, topic);
+        assertEquals(1, validationErrors.size());
+        assertEquals("Invalid value \"0TAG-TEST\" for field \"tags\": "
+                + "tags should start with letter and be followed by alphanumeric or _ characters.",
+                validationErrors.getFirst());
     }
 }
+
+
+
